frontend/test/should_fail/uniqueEdgeBy_exec.grg
using uniqueTestModelWithoutUniqueDeclarations;

rule t
{
	-e:Edge->;
	
	modify {
	---
		exec( { { edgeByUnique(42) == e } } );
	}
}
